-
Bug
-
Resolution: Done
-
P4: Low
-
None
-
5.9.4, 5.10.1, 5.15.0
-
Windows 7 x64 MSVC2015x64
-
37c68503cbada547291ec4c4873dc054a8b82510 (qt/qtbase/dev)
I found some inconsistency in serialization/deserialization of QFont using  QFont::fromString/QFont::toString and QDataStream operators QFont::operator<</QFont::operator>>.
In case of QFont::fromString / QFont::toString we do not serialize/deserialize font style strategy (use links to see code).
In case of QDataStream operators QFont::operator<< / QFont::operator>> we do this. Is it done by purpose?